# Popstcl

./: Cargo.toml  README.md  StartingOut.md  TODO.md
popstcl/: Cargo.toml
popstcl-core/: Cargo.toml
popstcl-core/src/: ast.rs  lib.rs  line_info.rs  namespace.rs
popstcl-core/src/cmds/: basic_math.rs  comp.rs  if_cmd.rs  list.rs  misc.rs  mod.rs  module.rs  object.rs  procedure.rs  var_cmds.rs  while_cmd.rs
popstcl-core/src/parser/: err.rs  lexer.rs  mod.rs  parser.rs
popstcl-core/src/popstd/: basic_math.rs  comp.rs  err.rs  eval.rs  (+12 more)
popstcl-core/tests/: comp.rs  err.rs  eval.rs  execution.rs  if_tests.rs  list_tests.rs  logic.rs  math_tests.rs  popstcl_module_tests.rs  proc.rs  str_sub.rs  var_tests.rs  while.rs
popstcl-derive/: Cargo.toml
popstcl-derive-test/: Cargo.toml
popstcl-derive-test/src/: lib.rs
popstcl-derive/src/: lib.rs
popstcl-i/: Cargo.toml
popstcl-i/src/: main.rs
popstcl/tests/: if_tests.rs  math_tests.rs  popstcl_module_tests.rs  var_tests.rs  while.rs
src/: ast.rs  basic_cmd.rs  common_obj.rs  err.rs  lib.rs  line_info.rs  main.rs  namespace.rs
src/cmds/: basic_math.rs  comp.rs  flow_control.rs  if_cmd.rs  list.rs  mod.rs  module.rs  procedure.rs  var_cmds.rs  while_cmd.rs
src/parser/: err.rs  lexer.rs  mod.rs  parser.lalrpop  parser.rs
src/vm/: cir.rs  cmd.rs  env.rs  env_builder.rs  env_entry.rs  err.rs  exec_signal.rs  executor.rs  mod.rs  module.rs  object.rs  object_kind.rs  permissions.rs  value.rs
tests/: comp.rs  if_tests.rs  list_tests.rs  math_tests.rs  popstcl_module_tests.rs  proc.rs  var_tests.rs  while.rs
(+42 files in other folders)
