[package]
name = "popstcl-derive-test"
version = "0.1.0"
authors = ["Random_Civvy <vomalexander@gmail.com>"]

[dependencies]
popstcl-core = { git = "https://gitlab.com/Random_Civvy/popstcl.git", branch="release" }
popstcl-derive = { git = "https://gitlab.com/Random_Civvy/popstcl.git", branch="release"}
